ENABLE_TESTING()

SET(MISC_FEATURES_NONBLOCK "nonblock")
SET(MISC_FEATURES_ARENA "arena")
SET(MISC_FEATURES_VECTOR "vector")

INCLUDE_DIRECTORIES("../include")

SET(CMAKE_C_STANDARD 23)
SET(CMAKE_C_STANDARD_REQUIRED TRUE)

ADD_COMPILE_OPTIONS(
  -O3
  -march=native
  -mtune=native
  -ffast-math
  -funroll-loops
  -Wall
  -Werror
  -Wextra
  -Wno-gnu-pointer-arith
  -Wno-pointer-arith
  -pedantic
)

ADD_LINK_OPTIONS(
  -fsanitize=address
)

ADD_EXECUTABLE(${MISC_FEATURES_NONBLOCK} nonblock.c)
TARGET_LINK_LIBRARIES(${MISC_FEATURES_NONBLOCK} ${PROJECT_NAME})

ADD_EXECUTABLE(${MISC_FEATURES_ARENA} arena.c)
TARGET_LINK_LIBRARIES(${MISC_FEATURES_ARENA} ${PROJECT_NAME})

ADD_EXECUTABLE(${MISC_FEATURES_VECTOR} vector.c)
TARGET_LINK_LIBRARIES(${MISC_FEATURES_VECTOR} ${PROJECT_NAME})
