ENABLE_TESTING()

SET(MISC_FEATURES_NONBLOCK "nonblock")
SET(MISC_FEATURES_ARENA "arena")
SET(MISC_FEATURES_VECTOR "vector")
SET(MISC_FEATURES_TCP "tcp")
SET(MISC_FEATURES_TCP_CLIENT "tcp_client")

INCLUDE_DIRECTORIES("../include")

SET(CMAKE_C_STANDARD 23)
SET(CMAKE_C_STANDARD_REQUIRED TRUE)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ADD_COMPILE_OPTIONS(
  -O3
  -march=native
  -mtune=native
  -ffast-math
  -funroll-loops
  -fomit-frame-pointer
  -Wall
  -Werror
  -Wextra
  -Wno-pointer-arith
  -pedantic
)

ADD_LINK_OPTIONS(
  -fsanitize=address
)

ADD_EXECUTABLE(${MISC_FEATURES_NONBLOCK} nonblock.c)
TARGET_LINK_LIBRARIES(${MISC_FEATURES_NONBLOCK} ${PROJECT_NAME})

ADD_EXECUTABLE(${MISC_FEATURES_ARENA} arena.c)
TARGET_LINK_LIBRARIES(${MISC_FEATURES_ARENA} ${PROJECT_NAME})

ADD_EXECUTABLE(${MISC_FEATURES_VECTOR} vector.c)
TARGET_LINK_LIBRARIES(${MISC_FEATURES_VECTOR} ${PROJECT_NAME})

ADD_EXECUTABLE(${MISC_FEATURES_TCP} tcp.c)
TARGET_LINK_LIBRARIES(${MISC_FEATURES_TCP} ${PROJECT_NAME})

ADD_EXECUTABLE(${MISC_FEATURES_TCP_CLIENT} tcp_client.c)
TARGET_LINK_LIBRARIES(${MISC_FEATURES_TCP_CLIENT} ${PROJECT_NAME})
